starlark_syntax/src/syntax/def_tests/dup_name.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark_syntax --lib
# ```

Program:
def test(x, y, x): pass

Error: error: duplicated parameter name
 --> test.star:1:16
  |
1 | def test(x, y, x): pass
  |                ^
  |
